terraform/uks-compa-net.tf
resource "azurerm_resource_group" "rg-uks-compa-net-01" {
  name     = "rg-uks-compa-net-01"
  location = "uksouth"
}

resource "azurerm_virtual_network" "vnet-uks-compa-01" {
  name                = "vnet-uks-compa-01"
  location            = azurerm_resource_group.rg-uks-compa-net-01.location
  resource_group_name = azurerm_resource_group.rg-uks-compa-net-01.name
  address_space       = ["10.10.0.0/16"]
}

resource "azurerm_subnet" "vnet-uks-compa-01-snet-01" {
  name                 = "vnet-uks-compa-01-snet-01"
  virtual_network_name = azurerm_virtual_network.vnet-uks-compa-01.name
  resource_group_name  = azurerm_resource_group.rg-uks-compa-net-01.name
  address_prefixes     = ["10.10.1.0/24"]
}
