terraform/uks-compb-vm.tf
resource "azurerm_resource_group" "rg-uks-compb-vm-01" {
  name     = "rg-uks-compb-vm-01"
  location = "uksouth"
}

resource "azurerm_public_ip" "pip-uks-compb-01" {
  name                = "pip-uks-compb-01"
  location            = azurerm_resource_group.rg-uks-compb-vm-01.location
  resource_group_name = azurerm_resource_group.rg-uks-compb-vm-01.name
  allocation_method   = "Static"
}

resource "azurerm_network_interface" "nic-uks-compb-01" {
  name                = "nic-uks-compb-01"
  location            = azurerm_resource_group.rg-uks-compb-vm-01.location
  resource_group_name = azurerm_resource_group.rg-uks-compb-vm-01.name
  ip_configuration {
    name                          = "public"
    subnet_id                     = azurerm_subnet.vnet-uks-compb-01-snet-01.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.pip-uks-compb-01.id
  }
}

resource "azurerm_linux_virtual_machine" "vm-uks-compb-01" {
  name                  = "vm-uks-compb-01"
  location              = azurerm_resource_group.rg-uks-compb-vm-01.location
  resource_group_name   = azurerm_resource_group.rg-uks-compb-vm-01.name
  network_interface_ids = [azurerm_network_interface.nic-uks-compb-01.id]
  size                  = "Standard_B1s"
  os_disk {
    storage_account_type = "Standard_LRS"
    caching              = "None"
  }
  source_image_reference {
    publisher = "Canonical"
    offer     = "ubuntu-24_04-lts"
    sku       = "server"
    version   = "latest"
  }
  admin_username = "labadmin"
  admin_ssh_key {
    username   = "labadmin"
    public_key = var.ssh_public_key
  }

}
